--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ import igicon from "../assets/images/ig.svg"
 
 <footer class="md:hidden bg-creamywhite text-brown border-t border-brown">
   <!-- Logo -->
-   <div class="p-8 border-b">
+   <div class="py-6 px-4 border-b">
           <img class="w-full h-full object-cover" src={explorewinesfooter.src} alt="">
     </div>
 
@@ -30,7 +30,7 @@ import igicon from "../assets/images/ig.svg"
       </div>
       <div>
         <h3 class="font-bold mb-2">Information</h3>
-        <ul class="text-sm space-y-1">
+        <ul class="text-smb space-y-1">
           <li><a href="#" class="hover:underline">Handelsbetingelser</a></li>
           <li><a href="#" class="hover:underline">Persondatapolitik</a></li>
           <li><a href="#" class="hover:underline">Cookiepolitik</a></li>
@@ -62,8 +62,8 @@ import igicon from "../assets/images/ig.svg"
 
  <!-- Højre side footer: Nyhedsbrev -->
   <div class="border-l p-6">
-      <p class="tracking-wide text-m md:text-[4.5rem]">Nyhedsbrev</p  >
-      <p class="text-mmb md:text-m leading-tight mb-4 mt-2">Tilmeld dig vores nyhedsbrev og få 10% rabat på din første ordre</p>
+      <p class="tracking-wide text-[2.5rem] md:text-[4.5rem]">Nyhedsbrev</p  >
+      <p class="text-mmb md:text-m leading-tight mb-4">Tilmeld dig vores nyhedsbrev og få 10% rabat på din første ordre</p>
         <!--  Input fælt -->
     <form class="flex md:flex-row items-center  overflow-hidden ">
       <input 
@@ -78,7 +78,7 @@ import igicon from "../assets/images/ig.svg"
         →
       </button>
     </form>
-      <p class="text-xsmb md:text-xs mt-2">
+      <p class="text-xsmb md:text-xs mt-2 mb-16 md:mb-0">
 Ved tilmelding til nyhedsbrevet accepterer jeg at modtage nyheder, tilbud og inspiration fra ExploreWines via e-mail. Jeg kan til enhver tid afmelde mig via linket i bunden af nyhedsbrevet. Oplysningerne behandles i overensstemmelse med ExploreWines' privatlivspolitik.      </p>
 </div>
 </footer>
