--- a/src/components/Anmeldelser.astro
+++ b/src/components/Anmeldelser.astro
@@ -19,7 +19,7 @@ import stjerne2 from "../assets/images/stjerne2.svg";
       <!-- Titel -->
       <h3 class="text-2xl md:text-3xl font-semibold">Anmeldelser</h3>
       <!-- Vinshop Knap -->
-                     <a href="/"><Button variant="primary" >Se Trustpilot</Button></a>
+                     <a href="/"><Button variant="tertiary" >Se Trustpilot</Button></a>
 
     </div>
 
@@ -29,7 +29,7 @@ import stjerne2 from "../assets/images/stjerne2.svg";
         <div class="text-center space-y-4 flex flex-col justify-between h-full">
           <div>
             <div class="flex justify-center text-black py-2">
-    <img class="" src={stjerne1.src} alt="5 trustpilot stjerner">
+    <img class="scale-100 hover:scale-105 transition" src={stjerne1.src} alt="5 trustpilot stjerner">
             </div>
             <p class="text-mmb md:text-m">Enkel og overkommelig luksus</p>
             <p class="text-smb md:text-s">
@@ -43,7 +43,7 @@ import stjerne2 from "../assets/images/stjerne2.svg";
         <div class="text-center space-y-4 flex flex-col justify-between h-full hidden md:block">
           <div>
           <div class="flex justify-center text-black py-2">
-    <img class="" src={stjerne2.src} alt="4 trustpilot stjerner">
+    <img class="scale-100 hover:scale-105 transition" src={stjerne2.src} alt="4 trustpilot stjerner">
             </div>
             <p class="text-mmb md:text-m">Perfekt til vinelskeren på budget</p>
             <p class="text-smb md:text-s">
@@ -57,7 +57,7 @@ import stjerne2 from "../assets/images/stjerne2.svg";
         <div class="text-center space-y-4 flex flex-col justify-between h-full hidden md:block">
           <div>
       <div class="flex justify-center text-black py-2">
-    <img class="" src={stjerne1.src} alt="5 trustpilot stjerner">
+    <img class="scale-100 hover:scale-105 transition" src={stjerne1.src} alt="5 trustpilot stjerner">
             </div>
             <p class="text-mmb md:text-m">Nemt og fleksibelt</p>
             <p class="text-smb md:text-s">
@@ -71,7 +71,7 @@ import stjerne2 from "../assets/images/stjerne2.svg";
         <div class="text-center space-y-4 flex flex-col justify-between h-full hidden md:block">
           <div>
       <div class="flex justify-center text-black py-2">
-    <img class="" src={stjerne1.src} alt="5 trustpilot stjerner">
+    <img class="scale-100 hover:scale-105 transition" src={stjerne1.src} alt="5 trustpilot stjerner">
             </div>
             <p class="text-mmb md:text-m">Fik mig til at prøve nye vine</p>
             <p class="text-smb md:text-s">
