--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -11,7 +11,7 @@ const { cardimage = "", cardimagealt = "", navn = "", land = "", aarstal = "", n
             <img 
                 src={cardimage} 
                 alt={cardimagealt} 
-                class="w-full h-full object-cover"
+                class="w-full h-full object-cover scale-100 hover:scale-105 transition"
             />
         </div>
 
