--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -74,7 +74,7 @@ import igicon from "../assets/images/ig.svg"
       />
       <button 
         type="submit" 
-        class="flex items-center justify-center px-6 py-3 border-r border-y border-brown text-lg font-medium hover:bg-red-700 hover:text-orange transition">
+        class="flex items-center justify-center px-6 py-3 border-r border-y border-brown text-lg font-medium hover:bg-brown hover:text-creamywhite transition">
         →
       </button>
     </form>
@@ -111,10 +111,10 @@ Ved tilmelding til nyhedsbrevet accepterer jeg at modtage nyheder, tilbud og ins
       <!-- Sociale Ikoner -->
       <div class="flex space-x-4 mt-4">
         <a href="https://www.facebook.com/ExploreWines/" class="text-l text-brown">
-          <img class="fab fa-facebook w-full h-full" src={igicon.src}>
+          <img class="fab fa-facebook w-full h-full scale-100 hover:scale-105" src={igicon.src}>
         </a>
         <a href="https://www.instagram.com/explorewines.dk/" class="text-l text-brown">
-          <img class="fab fa-instagram w-full h-full" src={fbicon.src}>
+          <img class="fab fa-instagram w-full h-full scale-100 hover:scale-105" src={fbicon.src}>
         </a>
       </div>
     </div>
@@ -154,7 +154,7 @@ Ved tilmelding til nyhedsbrevet accepterer jeg at modtage nyheder, tilbud og ins
       />
       <button 
         type="submit" 
-        class="flex items-center justify-center px-6 py-3 border-r border-y border-brown text-lg font-medium hover:bg-red-700 hover:text-orange transition">
+        class="flex items-center justify-center px-6 py-3 border-r border-y border-brown text-lg font-medium hover:bg-brown hover:text-creamywhite transition">
         →
       </button>
     </form>
