--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,8 +20,8 @@ import kurvHover from '../assets/images/kurv_hover.svg';
 
 <div class="mx-auto flex items-center justify-between py-4 border-b border-brown px-1 md:px-8">
   <!-- Venstre side: Logo -->
-  <a href="/" class="flex items-center gap-1">
-    <img src={headerlogo.src} alt="ExploreWines Logo" class="w-10 h-10" />
+  <a href="/" class="flex items-center gap-1 scale-100 hover:scale-105">
+    <img src={headerlogo.src} alt="ExploreWines Logo" class="w-10 h-10 " />
     <img src={headerlogotext.src} alt="ExploreWines Logo" class="w-[6.6rem]" />
   </a>
 
@@ -57,13 +57,13 @@ import kurvHover from '../assets/images/kurv_hover.svg';
   <img 
     src={login.src} 
     alt="User Icon" 
-    class="w-6 h-6 absolute group-hover:opacity-0 transition-opacity duration-300"
+    class="w-6 h-6 absolute group-hover:opacity-0 transition-opacity duration-300   "
   >
   <!-- Hover billede -->
   <img 
     src={loginHover.src} 
     alt="User Icon Hover" 
-    class="w-6 h-6 absolute opacity-0 group-hover:opacity-100 transition-opacity duration-300"
+    class="w-6 h-6 absolute opacity-0 scale-125 group-hover:opacity-100 transition-opacity duration-300  "
   >
 </div>
             <div class="relative w-6 h-6 group">
@@ -77,7 +77,7 @@ import kurvHover from '../assets/images/kurv_hover.svg';
   <img 
     src={kurvHover.src} 
     alt="User Icon Hover" 
-    class="w-6 h-6 absolute opacity-0 group-hover:opacity-100 transition-opacity duration-300"
+    class="w-6 h-6 absolute opacity-0 scale-125 group-hover:opacity-100 transition-opacity duration-300"
   >
 </div>
     </div>
@@ -177,7 +177,7 @@ import kurvHover from '../assets/images/kurv_hover.svg';
   <img 
     src={loginHover.src} 
     alt="User Icon Hover" 
-    class="w-6 h-6 absolute opacity-0 group-hover:opacity-100 transition-opacity duration-300"
+    class="w-6 h-6 absolute opacity-0 scale-125 group-hover:opacity-100 transition-opacity duration-300"
   >
 </div>
             <div class="relative w-6 h-6 group">
@@ -191,7 +191,7 @@ import kurvHover from '../assets/images/kurv_hover.svg';
   <img 
     src={kurvHover.src} 
     alt="User Icon Hover" 
-    class="w-6 h-6 absolute opacity-0 group-hover:opacity-100 transition-opacity duration-300"
+    class="w-6 h-6 absolute opacity-0 scale-125 group-hover:opacity-100 transition-opacity duration-300"
   >
 </div>
     </div>  
