--- a/src/components/abonnementcard.astro
+++ b/src/components/abonnementcard.astro
@@ -15,7 +15,7 @@ import Link from "../components/Link.astro";
             <img 
                 src={cardimage} 
                 alt={cardimagealt} 
-                class="w-full h-full object-cover"
+                class="w-full h-full object-cover scale-100 hover:scale-105 transition"
             />
         </div>
 
