--- a/src/pages/om.astro
+++ b/src/pages/om.astro
@@ -27,12 +27,12 @@ Hos Explorewines er vores mission at pirre dine smagsløg og give dig unikke vin
 <br>Har du spørgsmål til os er du velkommen til at kontakte os via knappen nedenfor.</p>
 
     <div class="mb-12 md:mb-48">
-      <Button>Kontakt</Button>
+      <Button variant="tertiary">Kontakt</Button>
     </div>
         
 
           <!-- Accordion component -->
-           <div class="divide-y divide-black ">
+           <div class="border-b divide-y divide-black ">
                <!-- Accordion item -->
                <div x-data="{ expanded: false }" class="py-2">
                    <p class="text-mmb md:text-m">
@@ -184,7 +184,7 @@ Vi har sat prisen for vinkasserne inklusive levering til kr. 599,- og vi kan gar
   <img 
     src={omos.src} 
     alt="Vinflasker" 
-    class="mb-8 md:mb-0 w-full h-auto md:max-w-[900px] object-contain"
+    class="mb-8 md:mb-0 w-full h-auto md:max-w-[900px] object-contain "
   
   >
 </div>
@@ -208,10 +208,10 @@ Vi har sat prisen for vinkasserne inklusive levering til kr. 599,- og vi kan gar
         <!-- Sociale Medier -->
         <div class="mb-20 md:mb-0 ml-6 md:ml-0 flex md:justify-start space-x-4">
           <a href="https://www.facebook.com/ExploreWines/" aria-label="Facebook">
-            <img src={fbicon.src} alt="Facebook" class="w-10 h-10">
+            <img src={fbicon.src} alt="Facebook" class="w-10 h-10 scale-100 hover:scale-105">
           </a>
           <a href="https://www.instagram.com/explorewines.dk/" aria-label="Instagram">
-            <img src={igicon.src} alt="Instagram" class="w-10 h-10">
+            <img src={igicon.src} alt="Instagram" class="w-10 h-10 scale-100 hover:scale-105">
           </a>
         </div>
       </div>
