--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -9,6 +9,7 @@ const buttonStyling =
 const variantClasses = {
   primary: "border-brown hover:bg-orange hover:text-creamywhite hover:border-orange transition-colors",
   secondary: "border-creamywhite text-creamywhite hover:bg-creamywhite hover:text-brown hover:creamywhite transition-colors",
+  tertiary: "border-brown hover:bg-brown hover:text-creamywhite hover:border-brown transition-colors",
   back:"border-none",
   forward:"border-none "
 
