--- a/src/pages/rodwin.astro
+++ b/src/pages/rodwin.astro
@@ -3,8 +3,6 @@ import MainLayout from "../layouts/MainLayout.astro";
 import Button from '../components/Button.astro';
 import Link from '../components/Link.astro';
 import { Image } from 'astro:assets';
-import thumbsup from "../assets/images/thumbsup.png";
-import filler from "../assets/images/filler.png";
 import Card from "../components/Card.astro";
 import abonnementkasse from "../assets/images/abonnementkasse.svg";
 import Anmeldelser from "../components/Anmeldelser.astro";
@@ -15,10 +13,10 @@ import Anmeldelser from "../components/Anmeldelser.astro";
       Vinabonnement
     </h1>	
 <section class="">
-  <div class="mx-auto grid grid-cols-1 md:grid-cols-2 md:gap-16 ml-8 md:ml-14 mr-8 md:mr-14 md:mb-24 mb-16">
+  <div class="mx-auto grid grid-cols-1 md:grid-cols-2 md:gap-16 ml-8 md:ml-14 mr-8 md:mr-14">
         <!-- Venstre Image -->
     <div class="flex justify-center">
-			<img class="md:object-cover :w-full h-auto" src={abonnementkasse.src} alt="kasse og vin">
+			<img class="md:object-cover :w-full h-[80%]" src={abonnementkasse.src} alt="kasse og vin">
     </div>
     <!-- Højre Content -->
     <div class="">
