--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -4,7 +4,6 @@
 
 @layer base {
   html {
-    @apply cursor-handcursor;
     scroll-behavior: smooth;
     @apply bg-base-background text-base-text; /* Brug de tilføjede farver */
   }
@@ -12,9 +11,12 @@
   body {
     @apply bg-base-background text-base-text;
   }
-
+  button {
+    @apply cursor-handcursor;
+  }
   a {
     @apply text-base-text; /* Links har også brun farve */
+    @apply cursor-handcursor;
   }
 
   h1,
