--- a/src/components/abonnementcard.astro
+++ b/src/components/abonnementcard.astro
@@ -4,6 +4,8 @@ import Button from '../components/Button.astro';
 import { Image } from 'astro:assets';
 const {cardimage="", cardimagealt="", navn="", description="", }= Astro.props;
 import Link from "../components/Link.astro";
+import roedvin from "../assets/images/roedvin.webp"
+
 ---
 
 
