--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,5 +1,6 @@
 ---
 import Button from '../components/Button.astro';
+import vinsingle from "../assets/images/singleview.webp"
 const { cardimage = "", cardimagealt = "", navn = "", land = "", aarstal = "", nr = "",  description = "" } = Astro.props;
 ---
 
