--- a/src/pages/abonnement.astro
+++ b/src/pages/abonnement.astro
@@ -9,6 +9,8 @@ import Anmeldelser from "../components/Anmeldelser.astro";
 import Card from "../components/Card.astro";
 import Abonnementcard from "../components/Abonnementcard.astro";
 import roedvin from "../assets/images/roedvin.webp"
+import hvidvin from "../assets/images/hvidvin.webp"
+import mixedvin from "../assets/images/mixed.webp"
 
 
 
@@ -44,7 +46,7 @@ import roedvin from "../assets/images/roedvin.webp"
     <div class="card group" data-card="2">
           <a href="/rodwin">
       <Abonnementcard
-        cardimage={roedvin.src}
+        cardimage={hvidvin.src}
         cardimagealt="Vinflaske"
         navn="Hvidvinskasse"
         description="Udforsk en verden af smag med fire unikke hvidvine fra forskellige hjørner af kloden. Nyd den livlige Chenin Blanc fra Sydafrikas Coastal Region, den blomstrede Torrontés fra Mendoza i Argentina, den delikate Riesling Spätlese Trocken fra Rheinhessen i Tyskland og den friske Verdejo fra Spaniens DO La Mancha. Denne hvidvinskasse er ideel til en smagfuld oplevelse eller som et eksklusivt indslag på din vinreol!"
@@ -56,7 +58,7 @@ import roedvin from "../assets/images/roedvin.webp"
     <div class="card group" data-card="3">
       <a href="/rodwin">
       <Abonnementcard
-        cardimage={roedvin.src}
+        cardimage={mixedvin.src}
         cardimagealt="Vinflaske"
         navn="Mixedkasse"
         description="Tag på en smagsrejse med otte udsøgte vine fra hele verden. Nyd frugtig Syrah, elegant Tempranillo, fyldig Touriga Nacional og klassisk Pinotage blandt rødvinene. Fra hvidvinsudvalget venter livlig Chenin Blanc, aromatisk Torrontés, delikat Riesling og sprød Verdejo. En oplagt mulighed for at udforske nye smagsoplevelser eller tilføje et sofistikeret touch til din vinreol!"
