--- a/src/components/abonnementcard.astro
+++ b/src/components/abonnementcard.astro
@@ -5,6 +5,8 @@ import { Image } from 'astro:assets';
 const {cardimage="", cardimagealt="", navn="", description="", }= Astro.props;
 import Link from "../components/Link.astro";
 import roedvin from "../assets/images/roedvin.webp"
+import hvidvin from "../assets/images/hvidvin.webp"
+import mixedvin from "../assets/images/mixed.webp"
 
 ---
 
