--- a/src/components/Anmeldelser.astro
+++ b/src/components/Anmeldelser.astro
@@ -19,7 +19,7 @@ import stjerne2 from "../assets/images/stjerne2.svg";
       <!-- Titel -->
       <h3 class="text-2xl md:text-3xl font-semibold">Anmeldelser</h3>
       <!-- Vinshop Knap -->
-                     <a href="/"><Button variant="tertiary" >Se Trustpilot</Button></a>
+                     <a href="https://dk.trustpilot.com/review/www.explorewines.dk"><Button variant="tertiary" >Se Trustpilot</Button></a>
 
     </div>
 
