--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -5,7 +5,7 @@
 @layer base {
   html {
     scroll-behavior: smooth;
-    cursor: url("/muz.png") 15 15, pointer;
+    cursor: url("/muz.png"), pointer;
     @apply bg-base-background text-base-text; /* Brug de tilføjede farver */
   }
   body {
