--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -44,7 +44,7 @@ const { cardimage = "", cardimagealt = "", navn = "", land = "", aarstal = "", n
             {description}
         </p>
         <div class="mt-4">
-            <Button>Køb nu</Button>
+          <a href="/rodwin"><Button variant="secondary">Køb nu</Button></a>
         </div>
     </div>
 </article>
