--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -287,7 +287,7 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
 </section>
 
   																<!-- Nyhedsbrev section -->
-		<section class="md:mt-36 md:mb-36 md:pl-10">
+		<section class="mt-48 md:mt-36 md:mb-36 md:pl-10">
   <div class="mx-auto grid grid-cols-1 md:grid-cols-2 items-center md:gap-14 gap-8">
     <!-- Venstre Content -->
 	   <div class="flex justify-center">
