--- a/src/pages/rodwin.astro
+++ b/src/pages/rodwin.astro
@@ -99,7 +99,7 @@ Tag på en smagsrejse med fire nøje udvalgte rødvine fra hele verden. Oplev fr
       <Card
         cardimage={vinsingle.src}
         cardimagealt="Vinflaske"
-        navn="Jongieux Blanc, Vin De,"
+        navn="Jongieux Blanc, Vin De"
         land="Frankrig"
         aarstal="2023"
         description="En elegant hvidvin fra Savoie-regionen i Frankrig, fremstillet på lokale druer. Årgang 2023 byder på en frisk og frugtrig smagsprofil med noter af citrus, grønne æbler og en let mineralsk afslutning. Perfekt som ledsager til fisk, skaldyr og lyse forretter.",
@@ -112,7 +112,7 @@ Tag på en smagsrejse med fire nøje udvalgte rødvine fra hele verden. Oplev fr
       <Card
         cardimage={vinsingle.src}
         cardimagealt="Vinflaske"
-        navn="L A Cruz Vega Roble, Bogarve,"
+        navn="L A Cruz Vega Roble, Bogarve"
         land="Spanien"
         aarstal="2018"
                 description="En elegant hvidvin fra Savoie-regionen i Frankrig, fremstillet på lokale druer. Årgang 2023 byder på en frisk og frugtrig smagsprofil med noter af citrus, grønne æbler og en let mineralsk afslutning. Perfekt som ledsager til fisk, skaldyr og lyse forretter.",
@@ -125,7 +125,7 @@ Tag på en smagsrejse med fire nøje udvalgte rødvine fra hele verden. Oplev fr
       <Card
         cardimage={vinsingle.src}
         cardimagealt="Vinflaske"
-        navn="Escriba Reserva, DOC do Tejo,"
+        navn="Escriba Reserva, DOC do Tejo"
         land="Portugal"
         aarstal="2022"
                 description="En elegant hvidvin fra Savoie-regionen i Frankrig, fremstillet på lokale druer. Årgang 2023 byder på en frisk og frugtrig smagsprofil med noter af citrus, grønne æbler og en let mineralsk afslutning. Perfekt som ledsager til fisk, skaldyr og lyse forretter.",
@@ -138,7 +138,7 @@ Tag på en smagsrejse med fire nøje udvalgte rødvine fra hele verden. Oplev fr
       <Card
         cardimage={vinsingle.src}
         cardimagealt="Vinflaske"
-        navn="Pinotage Organic Wine By Sophie,"
+        navn="Pinotage Organic Wine By Sophie"
         land="Sydafrika"
         aarstal="2022"
                 description="En elegant hvidvin fra Savoie-regionen i Frankrig, fremstillet på lokale druer. Årgang 2023 byder på en frisk og frugtrig smagsprofil med noter af citrus, grønne æbler og en let mineralsk afslutning. Perfekt som ledsager til fisk, skaldyr og lyse forretter.",
