--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,7 +20,7 @@ import kurvHover from '../assets/images/kurv_hover.svg';
 
 <div class="mx-auto flex items-center justify-between py-4 border-b border-brown px-1 md:px-8">
   <!-- Venstre side: Logo -->
-  <a href="/" class="flex items-center gap-1 scale-100 hover:scale-105">
+  <a href="/" class="flex items-center gap-1 transition duration-300 scale-100 hover:scale-105">
     <img src={headerlogo.src} alt="ExploreWines Logo" class="w-10 h-10 " />
     <img src={headerlogotext.src} alt="ExploreWines Logo" class="w-[6.6rem]" />
   </a>
