--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -69,7 +69,7 @@ import Udforskmobil from "../assets/images/knapheromobil.svg"
     <img 
       src={Udforsk.src} 
       alt="Udforsk udvalg knap"
-      class="w-full h-auto scale-100 hover:scale-110  ease-in duration-20 cursor cursor-handcursor "
+      class="w-full h-auto scale-100 hover:scale-110  transition duration-300 "
     >
     </a>
   </div>
