--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -98,7 +98,7 @@ Ved tilmelding til nyhedsbrevet accepterer jeg at modtage nyheder, tilbud og ins
           <img class="object-cover w-full h-full" src={explorewinesfooter.src} alt="">
     </div>
 
-   <div class="grid grid-cols-2 px-6 pb-8 border-brown place-items-center">
+   <div class="grid grid-cols-2 px-6 border-brown place-items-center">
     <!-- Venstre side: Kontakt og Information -->
     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8  ">
           <!-- Midt: Vinabonnement Links -->
@@ -142,7 +142,7 @@ Ved tilmelding til nyhedsbrevet accepterer jeg at modtage nyheder, tilbud og ins
     <!-- Højre Side: Nyhedsbrev -->
  <!-- Højre side footer: Nyhedsbrev -->
   <div class="border-l pl-6">
-      <p class="tracking-wide text-m md:text-[4.5rem]">Nyhedsbrev</p  >
+      <p class="text-m md:text-[4rem]">Nyhedsbrev</p  >
       <p class="text-mmb md:text-m leading-tight mb-4 mt-2">Tilmeld dig vores nyhedsbrev og få 10% rabat på din første ordre</p>
         <!--  Input fælt -->
     <form class="flex md:flex-row items-center  overflow-hidden mr-12 ">
@@ -158,7 +158,7 @@ Ved tilmelding til nyhedsbrevet accepterer jeg at modtage nyheder, tilbud og ins
         →
       </button>
     </form>
-      <p class="text-xsmb md:text-xs leading-relaxed mt-2 mr-8">
+      <p class="text-xsmb md:text-xs leading-relaxed mt-2 mr-8 mb-10">
 Ved tilmelding til nyhedsbrevet accepterer jeg at modtage nyheder, tilbud og inspiration fra ExploreWines via e-mail. Jeg kan til enhver tid afmelde mig via linket i bunden af nyhedsbrevet. Oplysningerne behandles i overensstemmelse med ExploreWines' privatlivspolitik.      </p>
 </div>
   </div>
