--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -11,6 +11,7 @@ const { title } = Astro.props;
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<meta name="description" content="Oplev en verden af vine med vores fleksible vinabonnement. Få nøje udvalgte rødvine, hvidvine og mixkasser leveret direkte til din dør hver måned. Smag, nyd og opdag nye favoritter med fri fragt og ingen binding!">
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{Astro.props.title}</title>
