--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import Udforskmobil from "../assets/images/knapheromobil.svg"
 
 
 ---
-<MainLayout title="Explore Wines">
+<MainLayout title="Explore Wines - Vin på abonnement">
 <article class="">
 																	 <!-- Hero section desktop  -->
 <section class="relative mb-40 h-2/3 hidden md:block">
